--- a/cmd/capture/ui/index.html
+++ b/cmd/capture/ui/index.html
@@ -136,7 +136,7 @@
       .tag.meta { background: rgba(15,23,42,0.06); color: rgba(15,23,42,0.70); }
       .panel-title-row { display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap; }
       .panel-title { font-size:0.8rem; letter-spacing:0.18em; text-transform:uppercase; color:var(--muted); font-weight:650; }
-      .search-group { display:flex; align-items:center; gap:10px; flex: 1 1 100%; width: 100%; }
+      .search-group { display:flex; flex-direction: column; align-items: stretch; gap:10px; flex: 1 1 100%; width: 100%; }
       .search-chips { display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
       .chip {
         display:inline-flex;
@@ -210,13 +210,13 @@
             <div class="muted">Drag to scrub. Click to jump.</div>
           </div>
 	          <div class="panel">
-	            <div class="panel-title-row">
-	              <div class="panel-title">Logs</div>
-	              <div class="search-group">
-	                <div id="chips" class="search-chips"></div>
-	                <input id="q" class="search" placeholder="Search logs (message/pod/container)" />
-	              </div>
-	            </div>
+		            <div class="panel-title-row">
+		              <div class="panel-title">Logs</div>
+		              <div class="search-group">
+		                <input id="q" class="search" placeholder="Search logs (message/pod/container)" />
+		                <div id="chips" class="search-chips"></div>
+		              </div>
+		            </div>
             <div class="logs">
               <table>
                 <thead>
