--- a/cmd/capture/ui/index.html
+++ b/cmd/capture/ui/index.html
@@ -128,8 +128,9 @@
       th { text-transform: uppercase; letter-spacing: 0.18em; font-size: 0.75rem; color: var(--muted); font-weight: 650; background: rgba(255,255,255,0.35); position: relative; user-select: none; }
       th .resizer { position: absolute; right: 0; top: 0; height: 100%; width: 10px; cursor: col-resize; }
       td.ts { white-space: nowrap; color: var(--muted); font-variant-numeric: tabular-nums; width: 140px; }
-      td.src { white-space: nowrap; width: 320px; font-variant-numeric: tabular-nums; }
+      td.src { white-space: nowrap; width: 220px; font-variant-numeric: tabular-nums; overflow: hidden; text-overflow: ellipsis; }
       td.msg { width: auto; }
+      #colSrc { width: 220px; }
       .tag { display:inline-block; padding: 2px 10px; border-radius: 999px; border: 1px solid rgba(15,23,42,0.10); background: rgba(37,99,235,0.08); color: #1d4ed8; font-weight: 650; font-size: 0.78rem; margin-right: 8px; }
       .tag.warn { background: rgba(251,191,36,0.18); color: #92400e; }
       .tag.fail { background: rgba(239,68,68,0.14); color: #991b1b; }
